Fix padding on mobile

--- a/ui/styles/style.sass
+++ b/ui/styles/style.sass
@@ -163,7 +163,7 @@ a
       display: none
     .thread-container
       .messages-container
-        padding: 0
+        padding: $header-height 0 0
         .messages
           margin: 0 24px
         .message-form
